fixed tests and comments